[실시간 통신 비교 분석] 이론 정리

--- a/이론.md
+++ b/이론.md
@@ -1,6 +1,6 @@
 # 실시간 위치 공유
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%208717bceca1894baabe3544d2bfba45b8/Untitled.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/110becf6-8d10-41ee-bdb9-9a7b0a64524b)
 
 ### 서론
 
@@ -36,8 +36,7 @@
 
 > 앞서 언급한 비연결성과 단방향 통신이 실시간 통신에 부적합한 이유이다. 실시간 통신이 수행되는 동안 양 측은 서로의 상태를 지속적으로 유지해야 한다. 즉 **연결이 지속적**이어야 한다. 또한 서로의 데이터를 수신하기 위해 **양방향성 통신**이 제공되어야 한다.
 >
-
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%208717bceca1894baabe3544d2bfba45b8/Untitled%201.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/8844a509-a268-4dd7-8a9f-629877e3822d)
 
 # 실시간 통신의 방법
 
@@ -63,7 +62,7 @@
 - 주기가 짧다면 서버에 더 자주 요청을 보내며, **실시간에 가까운 데이터 갱신**을 목표
 - 주기가 길다면 서버에 덜 자주 요청을 보내며, **서버 부하를 줄이면서도** 데이터를 정기적으로 갱신
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%208717bceca1894baabe3544d2bfba45b8/Untitled%202.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/52fd00bb-ef77-40a3-8ff6-f9601e046377)
 
 > 즉 실시간 통신을 위해 Polling 방법을 사용한다는 것은 **주기를 짧게 설정해서 지속적인 통신이 이루어지는 것처럼 보이게 한다는 것**이다. 하지만 이 과정에서 지속적으로 연결을 만들고 종료하는 과정이 반복되므로 선호되는 방법은 아니다.
 >
@@ -76,11 +75,11 @@
 >
 - 즉 클라이언트가 서버에 데이터를 요청했을 때 바로 반환하는 것이 아닌 서버와의 접속 시간을 길게 설정하여 **서버에서 이벤트가 발생하면** 데이터를 반환받도록 하는 방식이다.
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%208717bceca1894baabe3544d2bfba45b8/Untitled%203.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/33a556d4-73b0-49a7-9588-28cac5791050)
 
 ### Polling VS Long Polling
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%208717bceca1894baabe3544d2bfba45b8/Untitled%204.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/65dbb716-6c65-4f18-81cb-e9efb608c6e7)
 
 ### Long Polling : 완벽 대체가 가능할까?
 
@@ -109,7 +108,7 @@
 > SSE의 가장 큰 특징이다. **SSE는 서버 측에서의 단방향 통신**만을 지원한다.
 >
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%208717bceca1894baabe3544d2bfba45b8/Untitled%205.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/5b3bf4f0-6b38-464e-b86b-ba46a4297069)
 
 ### TEXT_EVENT_STREAM
 
