[실시간 통신 비교 분석] 이론 정리

--- a/이론.md
+++ b/이론.md
@@ -4,7 +4,7 @@
 
 ### 서론
 
-> **‘실시간 위치 공유’**라는 기능을 구현하기 위해 프로젝트에서 사용했던 기술은 STOMP였다. 고백하자면 STOMP를 선택하고 사용한 이유에 대해 명확한 근거가 부족했다. 당시 **‘단순히 많이 사용하고 Spring에서의 사용이 좋다’**였다. 프로젝트가 끝나고 고찰을 하는 과정에서 실시간 통신에 대해 깊이 있게 탐구해보기로 했다.
+> ‘실시간 위치 공유’라는 기능을 구현하기 위해 프로젝트에서 사용했던 기술은 STOMP였다. 고백하자면 STOMP를 선택하고 사용한 이유에 대해 명확한 근거가 부족했다. 당시 ‘단순히 많이 사용하고 Spring에서의 사용이 좋다’였다. 프로젝트가 끝나고 고찰을 하는 과정에서 실시간 통신에 대해 깊이 있게 탐구해보기로 했다.
 >
 
 ## 실시간 통신을 위해서……
