--- a/이론.md
+++ b/이론.md
@@ -1,6 +1,6 @@
 # 실시간 위치 공유 (이론)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/a28fcbd9-5e52-4b7a-a810-1ca20d53ae2e)
 
 ### 서론
 
@@ -37,7 +37,7 @@
 > 앞서 언급한 비연결성과 단방향 통신이 실시간 통신에 부적합한 이유이다. 실시간 통신이 수행되는 동안 양 측은 서로의 상태를 지속적으로 유지해야 한다. 즉 **연결이 지속적**이어야 한다. 또한 서로의 데이터를 수신하기 위해 **양방향성 통신**이 제공되어야 한다.
 >
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%201.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/530cbdce-537c-4802-89cf-22979353e974)
 
 # 실시간 통신의 방법
 
@@ -63,7 +63,7 @@
 - 주기가 짧다면 서버에 더 자주 요청을 보내며, **실시간에 가까운 데이터 갱신**을 목표
 - 주기가 길다면 서버에 덜 자주 요청을 보내며, **서버 부하를 줄이면서도** 데이터를 정기적으로 갱신
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%202.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/c4d2fe13-cc88-4f3b-80d8-c105e99c801d)
 
 > 즉 실시간 통신을 위해 Polling 방법을 사용한다는 것은 **주기를 짧게 설정해서 지속적인 통신이 이루어지는 것처럼 보이게 한다는 것**이다. 하지만 이 과정에서 지속적으로 연결을 만들고 종료하는 과정이 반복되므로 선호되는 방법은 아니다.
 >
@@ -76,11 +76,11 @@
 >
 - 즉 클라이언트가 서버에 데이터를 요청했을 때 바로 반환하는 것이 아닌 서버와의 접속 시간을 길게 설정하여 **서버에서 이벤트가 발생하면** 데이터를 반환받도록 하는 방식이다.
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%203.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/842cd486-644c-474c-9e48-b0d6f17b931e)
 
 ### Polling VS Long Polling
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%204.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/a3847b4b-f2a0-4aec-af28-5166027761c5)
 
 ### Long Polling : 완벽 대체가 가능할까?
 
@@ -109,7 +109,7 @@
 > SSE의 가장 큰 특징이다. **SSE는 서버 측에서의 단방향 통신**만을 지원한다.
 >
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%205.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/ebd2809e-eb23-43f7-b3bf-bd3d48103098)
 
 ### TEXT_EVENT_STREAM
 
@@ -203,7 +203,7 @@
 
 ---
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%206.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/8fccf286-3759-486b-94b9-6b13046ea852)
 
 ### Simple Text Oriented Messaging Protocol
 
@@ -222,14 +222,14 @@
   - WebSocket을 사용할 경우 Server와 클라이언트 사이에서 서로 **직접 메시지를 전송**한다.
   - 하지만 중간단에 메시지 브로커를 배치할 경우 **메시지 브로커가 각 사용자에게 메시지를 전송**한다. **(느슨한 결합성)**
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%207.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/b3de602d-e699-4e89-a76b-34eb38f3188d)
 
 ### Pub / Sub
 
 > 발행 구독 패턴으로서 비동기 메시징 패러다임이다.
 >
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%208.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/81f7c34a-89a9-462a-ac60-b02f2e1d1441)
 
 - **발행자**는 **특정 채널로 메시지를 전달**하고 **해당 채널의 구독자만 메시지를 수신**한다.
   - 발행자는 특정 수신자를 대상으로 전송하는 것이 아닌 특정 토픽(채널)을 대상으로 전송한다.
@@ -239,7 +239,7 @@
 
 ### 통신 과정
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%8B%E1%85%B5%E1%84%85%E1%85%A9%E1%86%AB)%208717bceca1894baabe3544d2bfba45b8/Untitled%209.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/d2d91e5f-9c65-45cc-ad09-94f219bd517e)
 
 1. subscriber는 특정 토픽에 대해 구독 요청을 보낸다. ( Subscribing )
 2. publisher는 특정 토픽에 메시지를 발행한다. ( Publishing )
