[실시간 통신 비교 분석] 구현 방법에 따른 로직 정리(code)

--- a/로직.md
+++ b/로직.md
@@ -1,6 +1,6 @@
 # 실시간 위치 공유 (로직 구현)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%85%E1%85%A9%E1%84%8C%E1%85%B5%E1%86%A8%20%E1%84%80%E1%85%AE%E1%84%92%E1%85%A7%E1%86%AB)%20f288c61bee5048819b3660d4e2520f42/Untitled.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/dbcebeb8-73d5-4e2e-877c-83195021fb17)
 
 ## 서론
 
