[실시간 통신 비교 분석] 구현 방법에 따른 로직 정리(code)

--- a/로직.md
+++ b/로직.md
@@ -2,6 +2,9 @@
 
 ![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/dbcebeb8-73d5-4e2e-877c-83195021fb17)
 
+자세한 코드 확인은 아래에서 가능하다.
+https://github.com/jinjoo-lab/RealTimeCommunication
+
 ## 서론
 
 > 앞서 실시간 통신 방법에 대한 이론을 전체적으로 다뤄봤다. 이번에는 각 실시간 통신을 **Spring 환경에서 구현하는 방법**에 대해 설명하고 **비교 분석 테스트를 위한 코드**를 설명하겠다.
