[실시간 통신 비교 분석] 테스트

--- a/테스트.md
+++ b/테스트.md
@@ -1,6 +1,6 @@
 # 실시간 위치 공유 (비교 테스트)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/92a468e4-5e2f-42cd-bd5f-ac9e5fc53e55)
 
 ## 서론
 
@@ -25,7 +25,7 @@
     - **1000 , 5000 , 10000명**의 최대 사용자를 기준으로 테스트하였다.
 3. 회복성을 보기 위해 나머지 10초 동안에는 유입되는 사용자를 0으로 설정하여 앞서 설정한 사용자들이 점진적으로 통신을 종료하게끔 작성했다.
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%201.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/d2ac1dd5-baf8-4c84-868b-be4c1754d49e)
 
 ## 테스트 툴
 
@@ -41,15 +41,15 @@
 
 - 50명이 3초동안 점진적으로 추가되어 1번 요청
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%202.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/c874a505-1063-46b9-aa0f-467cf3514f47)
 
 - 100명이 3초동안 점진적으로 추가되어 1번 요청
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%203.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/5e7cc70a-429d-46eb-bb1e-f3945b1bf872)
 
 - 500명이 3초동안 점진적으로 추가되어 1번 요청
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%204.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/8bf425b0-7070-480c-a5a1-bb0d572b3b7c)
 
 ### 한계 : Jmeter
 
@@ -60,7 +60,7 @@
 
 ### k6
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%205.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/1b509b1f-202a-458e-aa93-52eb1568247c)
 
 > 두번째로 고려하고 테스트 툴로 선택한건 k6였다. k6를 선택한 이유는 다음과 같다.
 >
@@ -68,13 +68,13 @@
 - WebSocket을 기본적으로 지원하여 추가 플러그인 없이 연결 설정과 관리 가능 → STOMP는 WebSocket연결을 통해 테스트 가능
     - k6에서 기본적으로 WebSocket 관련 테스트 기능을 지원하는 것을 알 수 있다 !
 
-  ![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%206.png)
+  ![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/df8a661a-df2b-4f30-a4ce-21fb51a80168)
 
 - Jmeter와 비교하여 더 다양한 지표 확인 가능
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%207.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/ac5ebed5-df8e-42e1-941d-d0c9294945f5)
 
 > 추가적으로 프로메테우스를 추가하여 Spring Server를 모니터링하였다. CPU 사용량과 메모리를 통신이 수행되는 동안 분석하기 위한 것이었다.
 >
@@ -426,15 +426,15 @@ export function stompTest() {
 
 ```
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%208.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/a9280034-5342-441c-a340-9c9d18a42920)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%209.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/315f5358-0761-4c17-aa3d-a56ae642ffa9)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2010.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/19619799-8b92-470d-8f6a-532c4897a733)
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2011.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/0aa35715-a74a-465e-bbaf-149822f448d4)
 
 ### 5000 명
 
@@ -459,15 +459,15 @@ export function stompTest() {
 
 ```
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2012.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/e624788c-36ed-4cca-b1c2-6da36d4909fd)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2013.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/ad20caac-a6fc-4f87-a26f-cca29c149f05)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2014.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/0708483b-d566-4d73-a9fe-8af489dffd88)
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2015.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/ec6444ad-aeb6-42f0-aff2-14282e65b291)
 
 ### 10000 명
 
@@ -492,15 +492,15 @@ export function stompTest() {
 
 ```
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2016.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/ac9681a9-ec80-4476-8df9-6621b40f0c57)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2017.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/36981c4e-f32d-4329-8c0c-2fdf342b85cb)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2018.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/b2db2dc6-e130-4419-834b-cfd26e72533d)
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2019.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/bb23ca84-bbd5-472f-b7ad-0adcdfb9505e)
 
 ## Long Polling
 
@@ -536,15 +536,15 @@ export function stompTest() {
 
 ```
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2020.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/3afd6009-7348-45d4-8de8-58319a1871b4)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2021.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/3a610adb-e699-422c-8ef2-9da1efe66c39)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2022.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/dd7c5f94-115f-416c-a00d-be8efe994440)
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2023.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/9ea01ba5-6451-46b7-804c-a5e45eb79801)
 
 ### 5000 명
 
@@ -577,15 +577,15 @@ export function stompTest() {
 
 ```
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2024.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/00e4638c-2705-4f25-ac34-2a08e98e6dac)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2025.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/f76aa589-0036-4e23-8ec6-e27eab786005)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2026.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/e24e3939-9fc9-4f63-8803-94d188485ebe)
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2027.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/8dcd624f-1514-4933-a78c-1a5b4a5e1584)
 
 ### 10000 명
 
@@ -612,15 +612,15 @@ export function stompTest() {
 
 ```
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2028.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/e2051e20-6bde-4977-ae47-7d14e7577ce4)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2029.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/be92363d-b108-4e85-b892-e8e6e8baa020)
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2030.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/3f163137-10c8-408a-be99-e9344a1851ff)
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2031.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/0d61bdab-491a-426d-9f9c-8123eada4052)
 
 ## WebSocket
 
@@ -643,7 +643,7 @@ export function stompTest() {
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2032.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/4a9e0d44-0ab5-49f8-a523-d792a321dd3b)
 
 ### 5000 명
 
@@ -666,7 +666,7 @@ export function stompTest() {
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2033.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/18f18721-3dbf-4f39-911d-9feb4e3c061d)
 
 ### 10000 명
 
@@ -689,7 +689,7 @@ export function stompTest() {
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2034.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/8c45b70d-32a9-48d3-905c-7c63eb520dbf)
 
 ## STOMP
 
@@ -712,7 +712,7 @@ export function stompTest() {
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2035.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/872c0a68-29ae-46d7-8482-586165420154)
 
 ### 5000 명
 
@@ -731,7 +731,7 @@ export function stompTest() {
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2036.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/c8f4f1f8-fca7-4d83-b5e1-e9bfde5a968e)
 
 ### 10000 명
 
@@ -753,6 +753,6 @@ export function stompTest() {
 
 ### Prometheus
 
-![Untitled](%E1%84%89%E1%85%B5%E1%86%AF%E1%84%89%E1%85%B5%E1%84%80%E1%85%A1%E1%86%AB%20%E1%84%8B%E1%85%B1%E1%84%8E%E1%85%B5%20%E1%84%80%E1%85%A9%E1%86%BC%E1%84%8B%E1%85%B2%20(%E1%84%87%E1%85%B5%E1%84%80%E1%85%AD%20%E1%84%90%E1%85%A6%E1%84%89%E1%85%B3%E1%84%90%E1%85%B3)%20aed32905aa7e444789ebc6216c5f52d6/Untitled%2037.png)
+![image](https://github.com/jinjoo-lab/Real-Time-Communication-Test/assets/84346055/86fdaf4c-2a61-428c-af25-42519e30373b)
 
 ## 분석
